# VeryLegitHuman-MCP

./: .gitignore  CLAUDE.md  README.md
verylegithuman-mcp/: pyproject.toml  requirements.txt  server.py
verylegithuman-mcp/src/: config.py  database.py  models.py  security.py  verification.py
verylegithuman-mcp/src/browser/: camoufox_engine.py  patchright_engine.py  session_manager.py
verylegithuman-mcp/src/email/: guerrilla.py  mailslurp.py  mailtm.py
verylegithuman-mcp/src/identity/: faces.py  generator.py  usernames.py
verylegithuman-mcp/src/opsec/: geolocation.py  mullvad.py  proxy_manager.py  tor_manager.py
verylegithuman-mcp/src/phone/: fivesim.py  twilio_client.py
verylegithuman-mcp/src/social/: content.py  postiz_client.py  reddit_client.py  twikit_client.py
